src/scss/_variables.scss
// Layout
$std-padding: 36px;
$std-margin: 30px;

$mobile-menu-height: 40px;
$sidebar-mobile-width: 90%;
$sidebar-tablet-width: 240px;
$sidebar-desktop-width: 290px;

$mobile-menu-btn-z: 4;
$sidebar-drawer-z: 3;
$sidebar-drawer-overlay-z: 2;
$results-table-header-z: 1;

// Style
$border-radius: 6px;

// Transitions
$transition-duration: 0.15s;
$ease-out-quad: cubic-bezier(0.5, 1, 0.89, 1);
$ease-in-quad: cubic-bezier(0.45, 0, 0.55, 1);

// Colors
$blue: #4981b2;
$night-blue: #3a394d;
$dark-night-blue: #242338;
$green: #39c6a9;
$dark-green: #1b816d;
$red: #f73a36;
$snow: #fff;
$concrete: #e1e5e8;
$slate: #333;
$chocolate: #746766;
$cream: #ebeae3;
$silver: #e3dfda;
$black-05: rgba(0, 0, 0, 0.05);
$snow-50: rgba(255, 255, 255, 0.5);
$snow-30: rgba(255, 255, 255, 0.3);
$snow-10: rgba(255, 255, 255, 0.1);

